feat: add option to disable spliting when H264 Annex-B is detected (#614)
* feat: add option to disable spliting when H264 Annex-B is detected

* add wpf ui toggles

* chore: remove public api check for flv

* fix warning unboxing a possibly null value

* fix cli tool help text

* feat(wpf): add disable split on h264annexb option for toolbox

--- a/BililiveRecorder.WPF/Controls/PerRoomSettingsDialog.xaml
+++ b/BililiveRecorder.WPF/Controls/PerRoomSettingsDialog.xaml
@@ -68,6 +68,11 @@
                                 <ui:ToggleSwitch IsOn="{Binding FlvProcessorSplitOnScriptTag}" OnContent="检测到可能缺少数据时分段" OffContent="检测到可能缺少数据时分段"/>
                             </StackPanel>
                         </local:SettingWithDefault>
+                        <local:SettingWithDefault IsSettingNotUsingDefault="{Binding HasFlvProcessorDisableSplitOnH264AnnexB}">
+                            <StackPanel>
+                                <ui:ToggleSwitch IsOn="{Binding FlvProcessorDisableSplitOnH264AnnexB}" OnContent="使用实验性花屏修复判定逻辑" OffContent="使用实验性花屏修复判定逻辑"/>
+                            </StackPanel>
+                        </local:SettingWithDefault>
                     </StackPanel>
                 </GroupBox>
                 <GroupBox Header="{l:Loc Settings_Splitting_Title}">
